# embedding-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  instructions.py  main.py  schemas.py  vllm_client.py
deploy/: .env.example  docker-compose.yml
examples/: qdrant_demo.py
scripts/: acceptance_smoke.py  start.sh  start_vllm.sh
tests/: test_instructions.py  test_main.py  test_schemas.py  test_vllm_client.py
